@@ -179,7 +179,8 @@ img .img-400 {
   width: 400px;
 }
 
-.inline {
+.inline,
+.inline-block {
   display: inline-block;
 }
 ul.inline li {
