@@ -1,0 +1,3 @@
+
+%h1 New Meeting
+= render 'ish_manager/meetings/form', meeting: @meeting
