@@ -30,4 +30,6 @@ Gem::Specification.new do |s|
   s.add_runtime_dependency "rails", "~> 6.0.0"
   s.add_runtime_dependency 'uglifier'
   s.add_runtime_dependency "mongoid_paranoia"
+  s.add_runtime_dependency "sidekiq"
+
 end
