@@ -25,4 +25,5 @@ master - 20200208 - adding map, marker management
         2022-03-12 - import/export of maps
 0.5.0 - 2022-04-30 - wiring in active admin for leads
                      activeadmin wont work, but leads wiring is in progress
+        2022-05-03 - meetings (notifications), and unsubscribes half-scaffold
 
